--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.application.name=second-limit
+server.port=8888
+
+spring.cloud.config.server.git.uri="C:\Users\PC\Downloads\spring-cloud-server\git-repo-second"
